methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:88: error: ':' expected but ')' found.
def ligne(c){
           ^MethodsPicture:109: error: identifier expected but '}' found.
}
^